# human-design-llm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
agents/: openai.yaml
data/empirical/: holdout_trials_answer_key.jsonl  holdout_trials_blinded.jsonl  prospective_prediction_registry.jsonl  public_figure_manifest_summary.json
docs/: INTRODUCTION.md  SEO.md  empirical-validation-protocol.md  execution-plan.md  github-research.md  install.md  release-checklist.md  roadmap.md  v2-delivery-plan.md  v2-master-plan.md  v2-scorecard.md  versioning.md
docs/contracts/: chart.md  empirical-trial.md  label-predictions.md  llm-package.md  (+12 more)
human_design/: __init__.py  bodygraph.py  career.py  empirical.py  empirical_dataset.py  empirical_trials.py  engine.py  evals.py  input.py  installer.py  knowledge.py  labels.py  prediction_registry.py  product.py  protocol_freeze.py  pyhd_adapter.py  reading.py  relationship.py  relationship_product.py  relationship_reading.py  schema.py  session.py  timing.py  timing_product.py  timing_reading.py  uncertainty.py
references/: README.md  index.json
runtimes/: README.md
scripts/: analyze_empirical_trial.py  analyze_label_predictions.py  analyze_prospective_registry.py  analyze_timing.py  analyze_uncertainty.py  build_holdout_trials.py  build_public_figure_manifest.py  calculate_chart.py  compare_relationship.py  evaluate_accuracy_benchmark.py  evaluate_empirical_readiness.py  evaluate_narrative.py  evaluate_public_figures.py  evaluate_relationship.py  evaluate_timing.py  evaluate_v2.py  freeze_empirical_protocol.py  generate_career_reading.py  generate_llm_product.py  generate_reading.py  generate_relationship_product.py  generate_relationship_reading.py  generate_timing_product.py  generate_timing_reading.py  install_skill.py  render_bodygraph.py  smoke_all.py
tests/: test_bodygraph.py  test_career.py  test_empirical.py  test_empirical_dataset.py  test_engine.py  test_evals.py  test_input.py  test_installer.py  test_knowledge.py  test_output_session.py  test_product.py  test_reading.py  test_relationship.py  test_relationship_product.py  test_relationship_reading.py  test_timing.py  test_timing_product.py  test_timing_reading.py  test_uncertainty.py
(+154 files in other folders)
